マップ表示、カメラ起動

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //とりあえず追記
+        classpath 'com.android.tools.build:gradle:7.1.2'
     }
 }
 
