--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--マップ表示-->
+    package="com.example.sample_flutter_map">
+    <!--位置情報取得？-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:label="flutter_application_develop"
         android:name="${applicationName}"
@@ -30,4 +34,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <!--これもマップ表示系-->    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 </manifest>
