--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -25,4 +25,16 @@ plugins {
     id "com.android.application" version "7.3.0" apply false
 }
 
+//追記箇所
+def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
+def properties = new Properties()
+
+assert localPropertiesFile.exists()
+localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
+
+def flutterSdkPath = properties.getProperty("flutter.sdk")
+assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+//追記終わり
+
 include ":app"
