--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - assets/Post.svg
     - assets/PostActive.svg
     - assets/TriCaPic_logo.png
+    - assets/TriCaPicapplogo1.svg
 
 
 
