--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   geolocator: ^9.0.1
 
   flutter_riverpod: ^2.4.5
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
