--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,5 +55,12 @@
   	<string>This app requires to add file to your camera</string>
   	<key>NSMicrophoneUsageDescription</key>
   	<string>This app requires to add file to your photo library your microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>このアプリはフォトライブラリにアクセスする必要があります</string>
+	<key>NSCameraUsageDescription</key>
+	<string>このアプリはカメラにファイルを追加する必要があります</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>このアプリでは、マイクのフォトライブラリにファイルを追加する必要があります</string>
+
 </dict>
 </plist>
