--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.1
   image_cropper: ^4.0.1
   geocoding: ^2.1.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
