更新、プレビュー、カプセルデザイン（仮）

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/TriCaPic_logo.png
     - assets/TriCaPicapplogo1.svg
     - assets/TriCaPic_icon.png
+    - assets/TimeCapsule.PNG
 
 
 
