--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
 #プロフィール写真の拡大に必要
   cupertino_icons: ^1.0.2
 
+  image: ^4.1.3
+
   #svgファイルを利用する
   flutter_svg: ^2.0.9
   # yamlにimportするときは、インデントも揃えないとエラーになる
