--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_cropper: ^4.0.1
   geocoding: ^2.1.1
   http: ^0.13.6
+  flutter_image_compress: ^2.1.0
 
 dev_dependencies:
   flutter_test:
