--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   geocoding: ^2.1.1
   http: ^0.13.6
   flutter_image_compress: ^2.1.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,7 @@ flutter:
     - assets/TriCaPicapplogo1.svg
     - assets/TriCaPic_icon.png
     - assets/TimeCapsule.PNG
+    - assets/Capsule_Filling_Animation.json
 
 
 
