エラーメッセージ削除

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,37 @@
 {
     "cSpell.words": [
+        "Ainim",
+        "Appbar",
+        "ARGB",
+        "audioplayers",
+        "autofocus",
+        "Capcontents",
+        "capsel",
+        "cleate",
+        "cupertino",
+        "darui",
         "decodedprofile",
         "deviceheight",
-        "Picapplogo"
+        "Geolocator",
+        "handleclear",
+        "homescreen",
+        "Housei",
+        "imagepath",
+        "imagepref",
+        "interps",
+        "kanagawa",
+        "latlong",
+        "Listnew",
+        "longtitude",
+        "nakami",
+        "Navigatorpop",
+        "Passwordforget",
+        "Picapplogo",
+        "placemark",
+        "riverpod",
+        "Signup",
+        "taku",
+        "Timline",
+        "vsync"
     ]
 }
