--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_image_compress: ^2.1.0
   lottie: ^2.7.0
   audioplayers: ^5.2.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
