フレンドリスト作成＆フレンドプロフ

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Ainim",
+        "aoike",
         "Appbar",
         "ARGB",
         "audioplayers",
@@ -12,26 +13,37 @@
         "darui",
         "decodedprofile",
         "deviceheight",
+        "doragon",
         "Geolocator",
         "handleclear",
+        "hiro",
         "homescreen",
         "Housei",
         "imagepath",
         "imagepref",
+        "inori",
         "interps",
+        "itouuuuuuuuuuuuuuu",
         "kanagawa",
+        "kawa",
+        "KAWAGUCHI",
         "latlong",
         "Listnew",
+        "Listpage",
         "longtitude",
+        "masato",
         "nakami",
         "Navigatorpop",
         "Passwordforget",
         "Picapplogo",
         "placemark",
         "riverpod",
+        "Saito",
+        "sakaki",
         "Signup",
         "taku",
         "Timline",
+        "toshima",
         "vsync"
     ]
 }
