タイムライン変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "decodedprofile",
         "deviceheight",
         "doragon",
+        "friendcapsule",
+        "friendcapsules",
         "Geolocator",
         "handleclear",
         "hiro",
@@ -30,10 +32,12 @@
         "latlong",
         "Listnew",
         "Listpage",
+        "loadfriendcapdata",
         "longtitude",
         "masato",
         "nakami",
         "Navigatorpop",
+        "nekoma",
         "Passwordforget",
         "Picapplogo",
         "placemark",
