--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "riverpod",
         "Saito",
         "sakaki",
+        "Screenpage",
         "Signup",
         "taku",
         "Timline",
