--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "decodedprofile",
         "deviceheight",
         "doragon",
+        "entertext",
         "friendcapsule",
         "friendcapsules",
         "Geolocator",
@@ -46,6 +47,7 @@
         "sakaki",
         "Screenpage",
         "Signup",
+        "Statusget",
         "taku",
         "Timline",
         "toshima",
