フレンドカプセル参照

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,57 +1,58 @@
 {
-    "cSpell.words": [
-        "Ainim",
-        "aoike",
-        "Appbar",
-        "ARGB",
-        "audioplayers",
-        "autofocus",
-        "Capcontents",
-        "capsel",
-        "cleate",
-        "cupertino",
-        "darui",
-        "decodedprofile",
-        "deviceheight",
-        "doragon",
-        "entertext",
-        "friendcapsule",
-        "friendcapsules",
-        "Geolocator",
-        "handleclear",
-        "hiro",
-        "homescreen",
-        "Housei",
-        "imagepath",
-        "imagepref",
-        "inori",
-        "interps",
-        "itouuuuuuuuuuuuuuu",
-        "kanagawa",
-        "kawa",
-        "KAWAGUCHI",
-        "latlong",
-        "Listnew",
-        "Listpage",
-        "loadfriendcapdata",
-        "longtitude",
-        "masato",
-        "nakami",
-        "Navigatorpop",
-        "nekoma",
-        "Passwordforget",
-        "Picapplogo",
-        "placemark",
-        "riverpod",
-        "Saito",
-        "sakaki",
-        "Screenpage",
-        "Signup",
-        "Statusget",
-        "taku",
-        "Timline",
-        "toshima",
-        "unfollow",
-        "vsync"
-    ]
+  "cSpell.words": [
+    "Ainim",
+    "aoike",
+    "Appbar",
+    "ARGB",
+    "audioplayers",
+    "autofocus",
+    "Capcontents",
+    "capsel",
+    "cleate",
+    "cupertino",
+    "darui",
+    "decodedprofile",
+    "deviceheight",
+    "doragon",
+    "entertext",
+    "friendcapsule",
+    "friendcapsules",
+    "Geolocator",
+    "handleclear",
+    "hiro",
+    "homescreen",
+    "Housei",
+    "imagepath",
+    "imagepref",
+    "inori",
+    "interps",
+    "itouuuuuuuuuuuuuuu",
+    "kanagawa",
+    "kawa",
+    "KAWAGUCHI",
+    "latlong",
+    "Listnew",
+    "Listpage",
+    "loadfriendcapdata",
+    "longtitude",
+    "masato",
+    "myuser",
+    "nakami",
+    "Navigatorpop",
+    "nekoma",
+    "Passwordforget",
+    "Picapplogo",
+    "placemark",
+    "riverpod",
+    "Saito",
+    "sakaki",
+    "Screenpage",
+    "Signup",
+    "Statusget",
+    "taku",
+    "Timline",
+    "toshima",
+    "unfollow",
+    "vsync"
+  ]
 }
