--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   lottie: ^2.7.0
   audioplayers: ^5.2.1
   photo_view: ^0.14.0
+  flutter_windowmanager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
