--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,13 @@
 name: flutter_application_develop
 description: "A new Flutter project."
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 #メモ：環境以下の通りになってる">=2.17.5 <3.0.0"
 environment:
-  sdk: '3.1.5'
-
+  sdk: "3.1.5"
 
 dependencies:
   flutter:
@@ -19,7 +17,7 @@ dependencies:
 
   cached_network_image: ^3.3.0
 
-#プロフィール写真の拡大に必要
+  #プロフィール写真の拡大に必要
   cupertino_icons: ^1.0.2
 
   image: ^4.1.3
@@ -37,9 +35,9 @@ dependencies:
   flutter_riverpod: ^2.4.5
   shared_preferences: ^2.2.2
 
-#アプリアイコンのためのパッケージ
+  #アプリアイコンのためのパッケージ
   flutter_launcher_icons: ^0.13.1
-#プロフィールの選択
+  #プロフィールの選択
   #image_picker: ^1.0.4
   path_provider: ^2.1.1
   image_cropper: ^4.0.1
@@ -50,6 +48,8 @@ dependencies:
   audioplayers: ^5.2.1
   photo_view: ^0.14.0
 
+  permission_handler: ^11.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,15 +58,12 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 #アプリアイコンの変更
-flutter_icons:       
+flutter_icons:
   android: true
   ios: true
   image_path: "assets/TriCaPic_icon.png"
 
-
 flutter:
-
-
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -86,6 +83,3 @@ flutter:
 
     - assets/
     #Capsule_digging.mp3
-
-
-
